[gd_scene load_steps=4 format=3 uid="uid://c5ywue46e7ojq"]

[ext_resource type="Script" path="res://Weather_page/weather_page.gd" id="1_fnjcs"]
[ext_resource type="Texture2D" uid="uid://bpyicxwqr3bnq" path="res://icon.svg" id="1_tsbfr"]
[ext_resource type="Texture2D" uid="uid://1s665lpyerua" path="res://Spinning_Idicator/loading circle.png" id="3_ggyux"]

[node name="Weather_page" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fnjcs")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(331, 522)
texture = ExtResource("1_tsbfr")

[node name="Spin" type="Sprite2D" parent="."]
visible = false
position = Vector2(376, 272)
scale = Vector2(0.232422, 0.232422)
texture = ExtResource("3_ggyux")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Location" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 60
text = "Location name"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -465.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -465.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 15

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -93.0
offset_right = 169.0
offset_bottom = 4.0
grow_vertical = 2
text = "Fetch"

[node name="Location_input" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -306.0
offset_bottom = -226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter Location Name"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="Location_input" to="." method="_on_location_input_text_changed"]
